@@ -68,12 +68,12 @@ stim6 = 12; stim7 = 13; stim8 = 14; stim9 = 15; stim10  = 16;
 
 % GROUP TaskObjects and eventmarkers for easy indexing
 selStim = [stim1; stim2; stim3; stim4; stim5; stim6; stim7; stim8; stim9; stim10];
-selEvts = [...
-    pic.fix1On;  pic.fix1Off; pic.fix2On; pic.fix2Off;...
-    pic.fix3On;  pic.fix4Off; pic.fix5On; pic.fix5Off;...
-    pic.fix6On;  pic.fix6Off; pic.fix7On; pic.fix7Off;...
-    pic.fix8On;  pic.fix8Off; pic.fix9On; pic.fix9Off;...
-    pic.fix10On; pic.fix10Off];
+selEvts  = [...
+    pic.fix1On; pic.fix1Off; pic.fix2On;  pic.fix2Off;...
+    pic.fix3On; pic.fix3Off; pic.fix4On;  pic.fix4Off;...
+    pic.fix5On; pic.fix5Off; pic.fix6On;  pic.fix6Off;...
+    pic.fix7On; pic.fix7Off; pic.fix8On;  pic.fix8Off;...
+    pic.fix9On; pic.fix9Off; pic.fix10On; pic.fix10Off];
 
 % DECLARE select timing and reward variables as NaN
 tHoldButtonOn = NaN;
