@@ -75,11 +75,11 @@ audWrong = 6;
 % CALIBRATION locations in DVA and group eventmarkers for easy indexing
 calLocs  = [-8,-8; 8,8; 8,-8; -8,8];
 calEvts  = [...
-    pic.calib1On;  pic.calib1Off; pic.calib2On; pic.calib2Off;...
-    pic.calib3On;  pic.calib4Off; pic.calib5On; pic.calib5Off;...
-    pic.calib6On;  pic.calib6Off; pic.calib7On; pic.calib7Off;...
-    pic.calib8On;  pic.calib8Off; pic.calib9On; pic.calib9Off;...
-    pic.calib10On; pic.calib10Off];
+    pic.calib1On; pic.calib1Off; pic.calib2On;  pic.calib2Off;...
+    pic.calib3On; pic.calib3Off; pic.calib4On;  pic.calib4Off;...
+    pic.calib5On; pic.calib5Off; pic.calib6On;  pic.calib6Off;...
+    pic.calib7On; pic.calib7Off; pic.calib8On;  pic.calib8Off;...
+    pic.calib9On; pic.calib9Off; pic.calib10On; pic.calib10Off];
 
 % RANDOMIZE the position of points if calRandFlag
 if(calRandFlag)
